<resources>
    <string name="app_name">VideoSample</string>


    <!--Message-->
    <string name="message_select_opponent">Select who you want to call</string>
    <string name="message_signing_in">Signing in</string>
    <string name="message_load_opponents">Loading opponents</string>
    <string name="message_permission_unavailable">%s is not available now!</string>
    <string name="message_push_notification_message">%s is calling you</string>
    <string name="subtitle_text_logged_in_as">Logged in as %s</string>
    <string name="connection_was_lost">Connection was lost</string>


    <!--Action-->
    <string name="action_update_opponens_list">Refresh</string>
    <string name="action_logout">Logout</string>
    <string name="action_call">Call</string>
    <string name="action_setting">Setting</string>


    <!-- Settings strings. -->
    <string name="title_video_category">Video</string>
    <string name="title_call_settings_category">Call Settings</string>

    <string name="pref_default_value">Default</string>
    <integer name="pref_default_int_value">0</integer>

    <string name="pref_default_camera_key">default_camera_preference</string>
    <string name="pref_default_camera_title">Default Camera</string>
    <string name="pref_default_camera_dlg">Select default camera</string>
    <string name="pref_default_camera_default">0</string>

    <string name="pref_frame_rate_key">frame_rate</string>
    <string name="pref_frame_rate_title">Frame Rate (0&#8211;30)</string>
    <string name="pref_frame_rate_default">0</string>
    <integer name="pref_frame_rate_min_value">0</integer>
    <integer name="pref_frame_rate_max_value">30</integer>
    <integer name="pref_frame_rate_stepSize">5</integer>

    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video Format</string>
    <string name="pref_resolution_dlg">Enter RTC local video resolution</string>
    <string name="pref_resolution_default">-1</string>

    <string name="pref_startbitrate_key">startbitrate_preference</string>
    <string name="pref_startbitrate_title">Start bitrate setting</string>
    <string name="pref_startbitrate_dlg">Start bitrate setting</string>
    <string name="pref_startbitrate_default">Default</string>

    <string name="pref_startbitratevalue_key">startbitratevalue_preference</string>
    <string name="pref_startbitratevalue_title">Bandwidth (0&#8211;2000)</string>
    <string name="pref_startbitratevalue_default">0</string>
    <integer name="pref_startbitratevalue_min_value">0</integer>
    <integer name="pref_startbitratevalue_max_value">2000</integer>
    <integer name="pref_startbitratevalue_step_size">100</integer>

    <string name="pref_disable_built_in_aec_key">disable_built_in_aec_preference</string>
    <string name="pref_disable_built_in_aec_title">Disable built-in AEC</string>
    <string name="pref_disable_built_in_aec_dlg">Disable built-in AEC</string>
    <string name="pref_disable_built_in_aec_default">false</string>
    <string name="pref_built_in_aec_not_available">Built-in AEC is not available</string>

    <string name="pref_opensles_key">opensles_preference</string>
    <string name="pref_opensles_title">Use OpenSL ES for audio playback</string>
    <string name="pref_opensles_dlg">Use OpenSL ES for audio playback</string>
    <string name="pref_opensles_default">false</string>

    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_title">Disable audio processing</string>
    <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline</string>
    <string name="pref_noaudioprocessing_default">false</string>

    <string name="pref_manage_speakerphone_by_proximity_key">manage_speakerphone_by_proximity_preference</string>
    <string name="pref_manage_speakerphone_by_proximity_title">Manage Speaker Phone by Proximity Sensor</string>
    <string name="pref_manage_speakerphone_by_proximity_dlg">Manage Speaker Phone by Proximity Sensor</string>
    <string name="pref_manage_speakerphone_by_proximity_summary">Enables managing of Speaker Phone by Proximity Sensor for Audio calls</string>
    <string name="pref_manage_speakerphone_by_proximity_default">false</string>

    <!--Call Settings-->

    <string name="pref_answer_time_interval_key">answer_time_interval</string>
    <string name="pref_answer_time_interval_title">Answer Time Interval (15&#8211;90s)</string>
    <string name="pref_answer_time_interval_default_value">60</string>
    <integer name="pref_answer_time_interval_min_value">15</integer>
    <integer name="pref_answer_time_interval_max_value">90</integer>
    <integer name="pref_answer_time_interval_step_size">5</integer>

    <string name="pref_disconnect_time_interval_key">disconnect_time_interval</string>
    <string name="pref_disconnect_time_interval_title">Disconnect Time Interval (10&#8211;90s)</string>
    <string name="pref_disconnect_time_interval_default_value">10</string>
    <integer name="pref_disconnect_time_interval_min_value">10</integer>
    <integer name="pref_disconnect_time_interval_max_value">90</integer>
    <integer name="pref_disconnect_time_interval_step_size">5</integer>

    <string name="pref_dialing_time_interval_key">Dialing_time_interval</string>
    <string name="pref_dialing_time_interval_title">Dialing Time Interval (3&#8211;10s)</string>
    <string name="pref_dialing_time_interval_default_value">5</string>
    <integer name="pref_dialing_time_interval_min_value">3</integer>
    <integer name="pref_dialing_time_interval_max_value">10</integer>
    <integer name="pref_dialing_time_interval_step_size">1</integer>

    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_videocodec_title">Default video codec</string>
    <string name="pref_videocodec_dlg">Select default video codec</string>
    <string name="pref_videocodec_default">0</string>

    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_title">Video codec hardware acceleration</string>
    <string name="pref_hwcodec_default">true</string>

    <string name="pref_value_enabled">Enabled</string>
    <string name="pref_value_disabled">Disabled</string>

    <string name="pref_room_server_url_key">room_server_url_preference</string>
    <string name="pref_room_server_url_title">Room server URL.</string>
    <string name="pref_room_server_url_dlg">Enter a room server URL.</string>
    <string name="pref_room_server_url_default" translatable="false">https://apprtc.appspot.com</string>

    <string name="pref_displayhud_key">displayhud_preference</string>
    <string name="pref_displayhud_title">Display call statistics.</string>
    <string name="pref_displayhud_dlg">Display call statistics.</string>
    <string name="pref_displayhud_default" translatable="false">false</string>
    <string name="pref_audiocodec_key">pref_audio_codec</string>
    <string name="pref_audiocodec_title">Default audio codec</string>
    <string name="pref_audiocodec_def">ISAC</string>
    <string name="pref_audiocodec_dlg">Select default audio codec</string>
    <string name="also_on_call">Also on call</string>
    <string name="user_list_on_call">User 1, User 2, User 3, User 4, User 5, User 6</string>
    <string name="ringing">Ringing</string>

    <string name="opponent_pending">Pending</string>
    <string name="opponent_closed">Closed</string>
    <string name="text_incoming_audio_call">Incoming Audio Call</string>
    <string name="text_incoming_video_call">Incoming Video Call</string>
    <string name="text_status_connect">Connect…</string>
    <string name="text_status_checking">Checking…</string>
    <string name="text_status_connected">Connected</string>
    <string name="text_status_disconnected">Disconnected</string>

    <string name="text_status_rejected">Rejected</string>
    <string name="text_status_no_answer">No answer</string>
    <string name="text_status_hang_up">Hung up</string>
    <string name="text_status_closed">Closed</string>
    <string name="text_status_time_out">Time Out</string>
    <string name="text_status_failed">Failed</string>
    <string name="accepted">Accepted</string>


    <string name="opponents">and %d other</string>
    <string name="opponent">and %s </string>
    <string name="action_settings">Settings</string>
    <string name="action_screen_share">Screen Share</string>
    <string name="camera_swicth_failed">camera swich error</string>
    <string name="stop_share">Stop</string>
</resources>
