<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/action_update_opponens_list"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/menu_call"
        android:icon="@drawable/ic_call"
        android:title="@string/action_call"
        app:showAsAction="always"
        />
    <item
        android:title="@string/action_setting"
        android:id="@+id/menu_setting"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"
        />

</menu>